# ensembl-prodinf-tools

./: CHANGELOG.md  MANIFEST.in  README.md  pyproject.toml  requirements.in  requirements.txt  setup.py
docs/: bulk_db_copy.rst  bulk_handover_database.rst  bulk_metadata_load.rst
src/ensembl/production/toolkit/: ensembl_dbcopy_client.py  event_client.py  gifts_client.py  metadata_client.py  rest_client.py  run_copy_db.py
src/scripts/: copy_from_report.py  copy_vertannot_staging.py  datacheck_client.py  db_copy_client.py  dbcopy_client.py  event_client.py  genomemetadata_client.py  gifts_client.py  handover_client.py  metadata_client.py  metadata_update.py  rest_client.py  run_copy_db.py  run_metadata.py  update_handover_status.py
src/tests/: test_clients.py  test_copy_from_report.py
